indexer bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,22 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
