indexer removes stop words now

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
