added some ranking methods

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,17 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
