fixed indexer, added some rank stuff

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,29 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
