ranking edited, so test storing disabled

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,11 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
