fixed ranking so that url and number of words in url are in a map, not a list or queue

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,20 @@ release.properties
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
