--- a/.gitignore
+++ b/.gitignore
@@ -1,161 +1,2 @@
 /target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/index.json
+/*.json
