--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<version>1.0.13</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
@@ -95,7 +95,7 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 
-							<mainClass>ranking.rank.IndexerRankerApp</mainClass>
+							<mainClass>rank.IndexerRankerApp</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -128,5 +128,7 @@
 				</plugin> -->
 		</plugins>
 	</build>
-
+	<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
